infra/clusters/netpi/infra/technitium/manifests/namespace.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.0-standalone-strict/namespace-v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: dns
  labels:
    app.kubernetes.io/name: technitium
    app.kubernetes.io/component: dns
